# apertium-por-cat

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-por-cat.cat-por.lrx  apertium-por-cat.cat-por.metalrx  apertium-por-cat.cat-por.t1x  apertium-por-cat.por-cat.dix  apertium-por-cat.por-cat.lrx  apertium-por-cat.por-cat.metalrx  apertium-por-cat.por-cat.t1x  cat_por_n.txt  cat_por_vblex.txt  configure.ac  genvldix.py  modes.xml  pt-ca.prob
dev/testvoc/: testvoc-summary.cat-por.txt  testvoc-summary.cat-por_BR.txt  testvoc-summary.cat-por_PTpre1990.txt  testvoc-summary.cat-por_br.txt  testvoc-summary.cat-por_pt_pre1990.txt  testvoc-summary.por-cat.txt  testvoc.conf  testvoc.sh
test/: cat-por-chunker-expected.txt  cat-por-generator-expected.txt  cat-por-lex-expected.txt  cat-por-postgen-expected.txt  cat-por-postgen-gold.txt  cat-por-pretransfer-expected.txt  cat-por_BR-chunker-expected.txt  cat-por_BR-disam-expected.txt  cat-por_BR-generator-expected.txt  cat-por_BR-lex-expected.txt  cat-por_BR-morph-expected.txt  cat-por_BR-postgen-expected.txt  cat-por_BR-postgen-gold.txt  cat-por_PTpre1990-chunker-expected.txt  cat-por_PTpre1990-generator-expected.txt  cat-por_PTpre1990-input.txt  cat-por_PTpre1990-lex-expected.txt  cat-por_PTpre1990-postgen-expected.txt  cat-por_PTpre1990-postgen-gold.txt  por-cat-biltrans-expected.txt  por-cat-chunker-expected.txt  por-cat-disam-expected.txt  por-cat-generator-expected.txt  por-cat-input.txt  por-cat-lex-expected.txt  por-cat-morph-expected.txt  por-cat-postgen-expected.txt  por-cat-postgen-gold.txt  por-cat-pretransfer-expected.txt  tests.json
